[package]
name = "pooly-h3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bitvec = "1.0.1"
google_maps = "2.1.5"
h3ron-h3-sys = "0.13.0"
hex = "0.4.3"
rand = "0.8.5"
redis = "0.21.5"
serde = { version = "1.0.140", features = ["derive"] }
thiserror = "1.0.31"

[features]
